# chasing-VOO

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
chasing_voo/: __init__.py  auto.py  benchmark.py  cli.py  config.py  metrics.py  models.py  storage.py
chasing_voo/providers/: __init__.py  base.py  manual.py  robinhood.py
dashboard/: app.py
data/: .gitkeep
docs/: AUTOMATION.md  CLOUD_VM.md  LOCAL_AUTOMATION.md
scripts/: cloud_update.sh  local_daily.sh  vm_daily.sh  vm_setup.sh
scripts/systemd/: chasing-voo-dashboard.service  chasing-voo.service  chasing-voo.timer
tests/: test_metrics.py  test_storage.py
